feat(new enrollment): implemented enroll user in course
implemented many-to-many association with entities Course and Users to generate Enrollment entity